--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,5 +38,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
+          config: pageLoadTimeout=200000,baseUrl=http://localhost:3000
           build: npm run build
           start: npm start
